# TextRefine-AI

./: README.md  pyproject.toml
src/text_refine_ai/: __init__.py  __main__.py  cli.py  exceptions.py  io.py  llm.py  pipeline.py  processing.py  prompts.py  renderer.py  schemas.py  web.py
src/text_refine_ai/static/: app.css  app.js
src/text_refine_ai/templates/: index.html
src/typer/: __init__.py  testing.py
tests/: test_cli.py  test_pipeline.py  test_processing.py  test_web.py
